# scurrying-beetle

./: Cargo.toml  beetle_map.rs  embeetle_32x32.rs  embeetle_32x32.xcf  embeetle_map  generate_map.py
src/: main.rs  wanderer.rs
