[package]
name = "scurrying-beetle"
version = "0.1.0"
edition = "2021"

[dependencies]
ch32-hal = { git = "https://github.com/barafael/ch32-hal", features = [
    "ch32v003f4u6",
    "embassy",
    "time-driver-tim2",
] }

embassy-executor = { version = "0.5.0", features = [
    "nightly",
    "integrated-timers",
    "arch-riscv32",
    "executor-thread",
    # "task-arena-size-512", or nightly
] }
embassy-time = { version = "0.3.0" }
embassy-futures = "0.1.1"

itertools = { version = "0.12.1", default-features = false }

embedded-hal = "1.0.0"

display-interface-i2c = "0.4.0"
embedded-graphics = "0.8.1"
ssd1309 = { version = "0.4.0" }
wyrand = "0.2.0"

[profile.release]
strip = true      # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s"   # Optimize for size.
codegen-units = 1
